--- a/index.html
+++ b/index.html
@@ -28,19 +28,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><img alt="Spacegeek224" src="https://avatars3.githubusercontent.com/u/7330137?v=3&s=460" width="40" height="40" style="margin-top:0px;"></a>
+      <a class="navbar-brand" href="#" style="padding-top: 5px;"><img alt="Spacegeek224" src="https://avatars3.githubusercontent.com/u/7330137?v=3&s=460" width="40" height="40" style="margin-top:0px;"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+        <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Help</a></li>Data <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
+            <li><a href="#">Sitemap</a></li>
+            <li><a href="http://github.com/spacegeek224/spacegeek224.github.io">Github page</a></li>
             <li><a href="#">Something else here</a></li>
             <li class="divider"></li>
             <li><a href="#">Separated link</a></li>
